--- a/public/assets/css/customstyles.css
+++ b/public/assets/css/customstyles.css
@@ -1,11 +1,11 @@
 .link {
-   color:#0404B4;
-   text-decoration: none; 
-   background-color: none;
+  color: #0404b4;
+  text-decoration: none;
+  background-color: none;
 }
 
 .contact-banner i {
-	color: #222;
+  color: #222;
 }
 
 .bold {
@@ -16,42 +16,52 @@
   text-transform: none;
   font-size: 22px;
   margin: 5px 0 15px;
-  text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;  
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 .black {
-	color:#000000;
+  color: #000000;
 }
 
-h3:before { 
-  display: block; 
-  content: " "; 
-  margin-top: -65px; 
-  height: 65px; 
-  visibility: hidden; 
+h3:before {
+  display: block;
+  content: ' ';
+  margin-top: -65px;
+  height: 65px;
+  visibility: hidden;
 }
 
-h2:before { 
-  display: block; 
-  content: " "; 
-  margin-top: -65px; 
-  height: 65px; 
-  visibility: hidden; 
+h2:before {
+  display: block;
+  content: ' ';
+  margin-top: -65px;
+  height: 65px;
+  visibility: hidden;
 }
 
 .subtitle {
-  margin-left:-2rem;
+  margin-left: -2rem;
 }
 
 #blog {
-  background: #F01B00;
-  color: #FFF;
+  background: #f01b00;
+  color: #fff;
 }
 
-#blog h1, #blog h2, #blog h3, #blog h4, #blog h5, #blog h6, #blog a:link, #blog a:visited, #blog a:hover, #blog a:active{
-  color: #FFF;
+#blog h1,
+#blog h2,
+#blog h3,
+#blog h4,
+#blog h5,
+#blog h6,
+#blog a:link,
+#blog a:visited,
+#blog a:hover,
+#blog a:active {
+  color: #fff;
+}
+
+h4 {
+  font-size: 1.2em;
 }
